--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 
 <body style="margin: 0">
     <canvas id="canvas" width="948" height="533" style="width: 948px; height: 533px; display: block;"></canvas>
+    <div style="display: none;">
+        <img id="heart" src="heart.png" />
+        <img id="floor" src="floor.png" />
+        <img id="wizard" src="red_wizard.png" />
+        <img id="monster" src="monster.png" />
+        <img id="instructions" src="instructions.png" />
+    </div>
 </body>
 
 </html>
